--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Latest compiled and minified CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="">
+<link rel="stylesheet" href="./font-6/css/all.css">
 
 <!-- Latest compiled JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
